--- a/about/index.html
+++ b/about/index.html
@@ -48,25 +48,25 @@
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">5+</h2>
-							<p>Years' experience</p>
+							<p>years' experience</p>
 						</div>
 					</div>
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">50+</h2>
-							<p>Websites</p>
+							<p>websites</p>
 						</div>
 					</div>
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">400</h2>
-							<p>Milligrams of caffeine per day</p>
+							<p>milligrams of caffeine per day</p>
 						</div>
 					</div>
 					<div class="fl-33">
 						<div class="stat">
 							<h2 class="huge">Chicago</h2>
-							<p>Area</p>
+							<p>area</p>
 						</div>
 					</div>
 				</div>
