--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
-					<a href="../../" class="home-logo"><img src="../media/g-logo.png" width="65px"></a>
+					<a href="../" class="home-logo"><img src="../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar">
 							<a href="../about/" class="fl-33">About</a>
