--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
 					<div class="intro-inner">
-						<h1 style="color: #fff;">I design and build user-centered experiences to evolve business.</h1>
+						<h1 style="color: #fff;">I build user-centered web experiences for business and lifestyle evolution.</h1>
 					</div>
 				</div>
 				<div class="padding">
@@ -90,8 +90,10 @@
 			</div>
 			<div class="w-cont flex-box padding callout">
 				<div class="fl-60 marg">
-					<p style="color: #FFF;" class="big">I'm a driven designer, developer, and techno addict delivering exceptional digital experiences that evolve brands and grow businesses around the nation.</p>
-					<p style="color: #FFF;" class="big">My devoted craft maintains identity and drives consistent usability across all channels through resolute UX strategy and thoughtful design.</p>
+					<p style="color: #FFF;" class="big">Hi, I’m Greg — a UX designer and web developer with a focus on WordPress and front-end design.</p>
+					<p style="color: #FFF;" class="big">I combine a deep understanding of user behavior with technical development expertise to code thoughtful products built for performance. From eCommerce to marketing sites to productivity software, I deliver meaningful, intuitive digital solutions that delight users and drive competitive business results alike.</p>
+					<p style="color: #FFF;" class="big">Talk to me about Fortnite, abstract art, and mean/dirty/nasty techno.</p>
+				
 				</div>
 				<div class="fl-50 marg">
 				</div>
@@ -214,7 +216,7 @@
 						<h3>Develop + Deliver</h3>
 						<p>HTML/CSS</p>
 						<p>JavaScript</p>
-						<p>Webflow</p>
+						<p>React</p>
 						<p>WordPress</p>
 					</div>
 				</div>
