--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr">
 					<div class="intro-inner">
-						<h1>Delivering first-class products. Revitalizing user experiences.</h1>
+						<h1>Delivering first-class web products with Figma, WordPress, and HTML, CSS, + JS.</h1>
 					</div>
 				</div>
 			</div>
