--- a/work/milo/index.html
+++ b/work/milo/index.html
@@ -95,7 +95,7 @@
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
 						<h2>I am part of the Technology team at JCMA Inc.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<p>Being a UX designer and Power Apps developer presents an interesting opportunity. So does sitting in the same room with the people with which you need to actively research. The nature of these parallels allowed me to really hone in and provide user-centered development solutions that can take Milo to the next level of usefulness.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -105,7 +105,7 @@
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
 						<h2>Project managers need a streamlined prioritization tool.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<p>Currently the main projector manager is required to provide weekly scoped lists for different team members in the office. This process involves digesting a list of 800+ tasks across 5 and defining each individual employees direction in the week based on project updates, client feedback, and interal affairs.</p>
 					</div>
 				</div>
 				<div class="flex-box al-c">
@@ -115,7 +115,7 @@
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Workflow</h5>
 						<h2>A large portion of time is wasted using external tools.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<p>The existing workflow involved pulling a table of Tasks per each team meber out of Milo and manually copy-pasting into Excel. From here a spreadsheet is made uniquely each week per person. Items are stratified based on the severity of their priority level and marked with time estimations. Individual columns for total number of priority hours are also manually calculated. It is a tedious process.</p>
 					</div>
 				</div>
 			</div>
@@ -128,7 +128,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>RESEARCH APPROACH</h5>
-						<h2 class="big">Team interviews and observational analysis led me to identify major paint point areas.</h2>
+						<h2 class="big">I identifed major paint point areas via interviews and observational analysis.</h2>
 					</div>
 				</div>
 			</div>
@@ -149,7 +149,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Clunky UI affordances</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Team members often reported being confused on the existing Milo UI, citing icons (or the lack thereof) as a source of confusion. A lot of unnecessary clicks throw off the mental model of current interface flows.</p>
 					</div>
 				</div>
 			</div>
@@ -160,7 +160,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>External tool reliance</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Relying on Excel and external note-taking methods, emailing, chatting team members/managers, and creating intricate spreadsheets each week defeats the whole purpose. This is a productivity app meant for project management. All of its capabilties should be self-contained.</p>
 					</div>
 				</div>
 			</div>
@@ -171,7 +171,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Lack of state awareness</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Team members need a clearer means of being able to sift through their own priorities. This presents the need for slicing and dicing mechanisms based on severity of priority type per task, difficulty of task and time estimation. Team members also need increased visbility around commenting and history of tasks.</p>
 					</div>
 				</div>
 			</div>
@@ -204,7 +204,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Spreadsheet Mania</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>I set out initially looking at different spreadsheets from Excel or Numbers and noted what strengths and opportunities they were affording. I then wireframed in tandem with Milo frames to see how these two could be morphed into another beast.</p>
 					</div>
 				</div>
 			</div>
@@ -215,7 +215,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Designing an Editable Grid</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Taking my inspiration from original Excel layouts, I designed my ideal table format for an editable grid in Milo. There is a toggle to add to a priority list, dropdowns for Priority Reason and Status Reason (with new types), and a button to quickly access comments. </p>
 					</div>
 				</div>
 			</div>
@@ -226,7 +226,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Ideal Task Form with Fluent UI</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>I combined everything together in a hi-fi mockup using Fluent UI Figma components. Comments exist in an in-view module, as well as visual representation for SharePoint files per task. Rollup hours exist here and so do new status types per task.</p>
 					</div>
 				</div>
 			</div>
@@ -262,7 +262,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">Current Task Status</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>New items were requested and added for better task health clarity and user control. Many options exist to help keep track of where tasks are at now.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -272,7 +272,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">Total Task Hours</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>Towards increasing awareness, users can now see a running total of all tracked time per eack task they work on.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -282,7 +282,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
 						<h2 class="big">Comments Notification</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>Filling in a huge gap from before, users finally now have an in-system bell icon for new comments and toast tabs that populate the screen. This is a huge win, as in the past we would navigate away from Milo and only see updates through Outlook.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -292,7 +292,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">04</h2>
 						<h2 class="big">Comments Flyout</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>Comment notifications now populate an easy-to-find sidebar. A running history is displayed with timestamps and small snippets.</p>
 					</div>
 				</div>
 			</div>
@@ -316,7 +316,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">Priorities Dashboard</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>A new dashboard view shows only a list of priortized tasks. In the past, users were inundated with their entire list of owned tasks, even though this included stale tasks or items on hold. Priority types now help to digest the list.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -326,7 +326,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">User Form Priorities</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>I created a new pathway. A convenient sidebar location of Users directs all managers to a list of each individual. Within that screen, each team member's list of tasks can be viewed and edited.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -336,7 +336,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
 						<h2 class="big">Priority Hours Rollup</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>A benefit of the old spreadsheets was having running totals of different priority type hours of tasks. The benefit of my implementation is that now this process happens automatically based on calculations onboard the system. Presenting this forefront keeps a great view of each team member's workload.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -346,7 +346,7 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">04</h2>
 						<h2 class="big">Editable Grid</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>A huge win for the team is having an editable grid exist for a user's table of Priority Tasks. This allows managers to edit tasks on the fly with new information as it comes in, creating a more agile and lifelike environment in Milo.</p>
 					</div>
 				</div>
 			</div>
