--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section id="top-nav" class="header flex-col j-c al-c">
 		<div class="container">
 			<div class="padding">
-				<div class="flex-box sp-b al-c fl-wr">
+				<div class="flex-box sp-b al-c fl-wr padding">
 					<a href="./" class="home-logo"><img src="media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
 						<div id="navbar" class="al-c">
@@ -69,7 +69,7 @@
 				<a href="#united-cargo" class="btn">Mobile app</a>
 			</div>
 			<div class="padding">
-				<div class="flex-box al-c scroll-box">
+				<div class="flex-box al-fl-st scroll-box">
 					<div id="ritacms" class="card">
 						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
 						<a href="work/rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
@@ -129,16 +129,16 @@
 		</div>
 	</section>
 	<footer>
-		<div class="w-cont padding marg">
-			<div class="flex-box al-c">
+		<div class="w-cont marg">
+			<div class="flex-box al-c padding">
 				<div class="fl-80">
 					<h2 class="big">Let's work together.</h2>
 				</div>
 				<div class="fl-20">
 					<nav class="foot-menu flex-col al-fl-st">
-						<a href="Work">About</a>
-						<a href="Work">Work</a>
-						<a href="Work">Resume</a>
+						<a href="about">About</a>
+						<a href="work">Work</a>
+						<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank">Resume</a>
 						<a href="https://github.com/gregsirko/" target="_blank" aria-label="GitHub">
 							<svg
 							xmlns="http://www.w3.org/2000/svg"
