--- a/work/united-cargo/index.html
+++ b/work/united-cargo/index.html
@@ -14,13 +14,35 @@
 	<section id="top-nav" class="header flex-col j-c al-c">
 		<div class="container">
 			<div class="padding">
-				<div class="flex-box sp-b al-c fl-wr">
+				<div class="flex-box sp-b al-c fl-wr padding">
 					<a href="../../" class="home-logo"><img src="../../media/g-logo.png" width="65px"></a>
 					<div class="wrapper">
-						<div id="navbar">
-							<a href="../../about/" class="fl-33">About</a>
+						<div id="navbar" class="al-c">
+							<a href="../../about" class="fl-33">About</a>
 							<a href="../../work/" class="fl-33">Work</a>
 							<a href="https://drive.google.com/file/d/1yKaoDAzNy0v1eMX1wVg4DQPUao9JaWPj/view?usp=sharing" target="_blank" class="fl-33">Resume</a>
+							<a href="https://github.com/gregsirko/" target="_blank" aria-label="GitHub" class="head-nav-gl">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								fill="currentColor"
+								>
+							<path d="M12 0C5.37 0 0 5.37 0 12a12 12 0 008.21 11.43c.6.11.82-.26.82-.58v-2.04c-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.34-1.77-1.34-1.77-1.09-.74.09-.73.09-.73 1.2.09 1.83 1.23 1.83 1.23 1.07 1.83 2.8 1.3 3.49.99.11-.78.42-1.3.76-1.6-2.67-.3-5.48-1.34-5.48-5.95 0-1.32.47-2.4 1.24-3.25-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.48 11.48 0 016 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.77.85 1.24 1.93 1.24 3.25 0 4.63-2.81 5.65-5.49 5.95.43.38.82 1.12.82 2.26v3.35c0 .32.22.7.82.58A12 12 0 0024 12C24 5.37 18.63 0 12 0z"/>
+							</svg>
+						</a>
+						<a href="https://www.linkedin.com/in/gregsirko/" target="_blank" aria-label="LinkedIn" class="head-nav-gl">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								fill="currentColor"
+								>
+								<path d="M20.447 20.452h-3.554v-5.569c0-1.328-.026-3.037-1.85-3.037-1.853 0-2.136 1.445-2.136 2.94v5.666H9.354V9h3.414v1.561h.049c.476-.9 1.637-1.85 3.37-1.85 3.601 0 4.268 2.37 4.268 5.455v6.286zM5.337 7.433a2.062 2.062 0 110-4.123 2.062 2.062 0 010 4.123zM6.963 20.452H3.708V9h3.255v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
+							</svg>
+						</a>
 						</div>
 					</div>
 				</div>
